@@ -145,11 +145,12 @@ monster_cloak_check_type: 0
 // Can't place unlimited land skills at the same time (Note 4)
 land_skill_limit: 1
 
-// If skill fails by delay, should it display or not.  (Note 1)
-display_delay_skill_fail: no
-
-// Display Snatcher skill failures
-display_snatcher_skill_fail: yes
+//Determines which kind of skill-failed messages should be sent:
+// 1 - Disable all skill-failed messages.
+// 2 - Disable skill-failed messages due to can-act delays.
+// 4 - Disable failed message from Snatcher
+// 8 - Disable failed message from Envenom
+display_skill_fail: 0
 
 // Can a player in chat room (in-game), be warped by a warp portal? (Note 1)
 chat_warpportal: no
